@@ -1,3 +1,4 @@
+1891 [pre-rendering job] added full status update to the progress window if using MeGUI x64
 1890 [pre-rendering job] changed AVISource to FFVideoSource and added the corresponding FFIndex job
 1889 [OneClick] the source type detection will not anymore open a blocking popup in case of an error. instead the error message will be written into the log. Feature request #3148688
 1888 [AVS Cutter] fixed async audio with fades. Bug #2945637
